# AcademicAgentEval

./: .gitignore  AGENTS.md  CHANGE_LOG.md  CLAUDE.md  README.md  pyproject.toml  赛题描述.md
configs/profiles/: local-proxy-v1.json
configs/smoke/: asta-paper-finder.template.json  pasa.template.json  spar.template.json
docs/: evaluation-protocol.md  new-system-guide.md
docs/baselines/: asta-paper-finder.md  pasa.md  spar.md
examples/: demo_dataset.jsonl  run_demo.py
src/academic_agent_eval/: __init__.py  __main__.py  agents.py  cli.py  config.py  dataset_adapters.py  datasets.py  evaluator.py  parsers.py  reporting.py  runner.py  schemas.py  scoring.py  tracking.py
src/academic_agent_eval/integrations/: __init__.py
tests/: test_agent_query.py  test_config_scoring.py  test_dataset.py  test_evaluator.py  test_integrations.py  test_parser_tracking.py  test_runner.py
