[project]
name = "academic-agent-eval"
version = "0.1.0"
description = "A modular evaluation harness for academic paper search agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "AcademicAgentEval contributors" }]
dependencies = []

[project.scripts]
academic-agent-eval = "academic_agent_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/academic_agent_eval"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
